--- a/expensetracker/src/App.css
+++ b/expensetracker/src/App.css
@@ -212,9 +212,16 @@
   }
 
   .topExpenses {
-    background-color: white;
-    width: 49%;
+
+    width: 100%;
     border-radius: 1rem;
+  }
+
+  .topExpenseHeader {
+    margin: 1rem 0rem;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
   }
 
   .App {
@@ -264,6 +271,15 @@
   .topExpenses {
     background-color: white;
     border-radius: 1rem;
+  }
+
+  .topExpenseHeader {
+    margin: 1rem 0rem;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    position: relative;
+    top: -4rem;
   }
 
   .transactionHistory {
@@ -348,12 +364,41 @@
     left: -0.2rem;
   }
 
-  .topExpenses {
+  /* .topExpenses {
     background: white;
     height: auto;
     margin: 0rem 2rem;
     padding: 1rem;
     border-radius: 1rem;
+  } */
+
+  .topExpenseHeader {
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 700;
+    margin: 1rem 2rem;
+  }
+
+  .topExpenseHeader {
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 700;
+    margin: 1rem 2rem;
+  }
+
+  .transactionHeader {
+    width: fit-content;
+    position: relative;
+    left: 2rem !important;
+    color: white;
+  }
+
+  .chartWrapper {
+    width: 90% !important;
+    height: 300px !important;
+    background: white !important;
+    border-radius: 1rem !important;
+    margin: auto;
   }
 
   .recharts-wrapper-horizontal {
