--- a/expensetracker/src/App.css
+++ b/expensetracker/src/App.css
@@ -179,7 +179,7 @@
     display: flex;
     flex-direction: column;
     /* gap: 1rem; */
-    width: 78rem;
+    /* width: 78rem; */
     min-width: 60rem;
     border-radius: 1rem;
   }
