--- a/expensetracker/src/App.css
+++ b/expensetracker/src/App.css
@@ -327,6 +327,13 @@
     height: auto;
   }
 
+  .charts {
+    height: 15rem;
+    position: relative;
+    top: -2rem;
+    right: 1rem;
+  }
+
   .recharts-wrapper {
     position: relative;
     cursor: default;
@@ -360,7 +367,7 @@
     position: relative;
     top: 0rem;
     min-width: 0rem;
-    width: 39rem;
+    width: 31rem;
     left: -0.2rem;
   }
 
